post swagger list
